--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@material/web": "^1.4.0",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
     },
