--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@material/web": "^1.0.0",
+        "oh-vue-icons": "^1.0.0-rc3",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4"
     },
