--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@material/web": "^1.0.0",
         "npm": "^10.5.0",
         "oh-vue-icons": "^1.0.0-rc3",
+        "swagger-ui": "^5.13.0",
         "vue": "^3.3.4",
-        "vue-router": "^4.2.4"
+        "vue-router": "^4.2.4",
+        "yaml-loader": "^0.8.1"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.3.3",
