--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "swagger-ui": "^5.13.0",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
+        "vuetify": "^3.5.15",
         "yaml-loader": "^0.8.1"
     },
     "devDependencies": {
