--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@material/web": "^1.0.0",
+        "axios": "^1.6.8",
         "npm": "^10.5.0",
         "oh-vue-icons": "^1.0.0-rc3",
         "swagger-ui": "^5.13.0",
