--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "@material/web": "^1.0.0",
         "axios": "^1.6.8",
         "npm": "^10.5.0",
-        "oh-vue-icons": "^1.0.0-rc3",
         "swagger-ui": "^5.13.0",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
@@ -25,6 +24,7 @@
         "yaml-loader": "^0.8.1"
     },
     "devDependencies": {
+        "@mdi/font": "^7.4.47",
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node20": "^20.1.2",
         "@types/jsdom": "^21.1.6",
