--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node20": "^20.1.2",
         "@types/jsdom": "^21.1.6",
+        "@types/leaflet": "^1.9.11",
         "@types/node": "^20.11.25",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vue-leaflet/vue-leaflet": "^0.10.1",
