--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dependencies": {
         "@material/web": "^1.0.0",
         "axios": "^1.6.8",
-        "dotenv": "^16.4.5",
+        "countries-list": "^3.1.0",
         "npm": "^10.5.0",
         "swagger-ui": "^5.13.0",
         "vue": "^3.3.4",
