--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vuetify": "^3.5.15",
-        "yaml-loader": "^0.8.1"
+        "yaml-loader": "^0.8.1",
+        "date-fns": "^3.6.0"
     },
     "devDependencies": {
         "@mdi/font": "^7.4.47",
