--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
         "prod": "npm run-script build && serve build"
     },
     "dependencies": {
-        "world-geojson": "^3.0",
         "@material/web": "^1.0.0",
         "axios": "^1.6.8",
         "countries-list": "^3.1.0",
+        "date-fns": "^3.6.0",
         "npm": "^10.5.0",
         "serve": "^14.2.1",
         "swagger-ui": "^5.13.0",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
         "vuetify": "^3.5.15",
-        "yaml-loader": "^0.8.1",
-        "date-fns": "^3.6.0"
+        "world-geojson": "^3.0",
+        "yaml-loader": "^0.8.1"
     },
     "devDependencies": {
         "@mdi/font": "^7.4.47",
