--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,7 @@
       "playwright.config.*"
     ],
     "compilerOptions": {
+      "allowImportingTsExtensions": true,
       "composite": true,
       "noEmit": true,
       "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
